--- a/functions/package.json
+++ b/functions/package.json
@@ -13,10 +13,14 @@
     "node": "8"
   },
   "dependencies": {
-    "firebase-admin": "~5.12.1",
-    "firebase-functions": "^1.0.3",
-    "dialogflow-fulfillment": "^0.4.1",
-    "actions-on-google": "^2.1.3"
+    "actions-on-google": "2.4.0",
+    "firebase-admin": "^5.13.1",
+    "firebase-functions": "^2.0.2",
+    "dialogflow": "^0.6.0",
+    "dialogflow-fulfillment": "^0.5.0",
+    "cheerio": "^1.0.0-rc.2",
+    "request-promise-native": "^1.0",
+    "request": "^2.87"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
